1.2.8p23:

1.2.8p22:
    Checks & Agents:
    * 4616 FIX: mk_postgres/mk_db2.linux: Fixed quotes which lead into wrong interpretation...
    * 4471 FIX: Windows Agent Process Monitoring: ps section is no longer completely suppressed when only parts of the data is missing...
    * 4622 FIX: emc_isilon_diskstatus: Now treats L3 caching devices as OK
    * 8286 FIX: brocade_mlx_power: Added new standard OID for snChasPwrSupply2Table to receive all power supplies in stacked devices
    * 4638 FIX: esx_vsphere_hostsystem.multipath: Fixed compatibility to older versions...
    * 4627 FIX: apc_symmetra: Fix bogus 100000000 A battery current  occurring on some devices...
    * 4593 FIX: wmi_cpuload: Fixed missing WATO group
    * 4640 FIX: heartbeat_crm: Fixed crash if output contains capital letters
    * 4647 FIX: websphere_mq_queues: Fixed 'list index out of range' error...
    * 4648 FIX: mk_oracle: Fixed logswitches SQL statement for ORACLE RAC case...

    Multisite:
    * 4610 FIX: Fixed error in graph displaying views with invalid perfdata strings...
    * 4474 FIX: graphs for fileinfo checks: the size value was displayed without unit information
    * 4669 FIX: Fixed possible exception in view dashlets (e.g. single event views)...
    * 4671 FIX: Metrics: Fixed exceptions when trying to parse perfdata with range warn/crit...

    WATO:
    * 4558 FIX: Set correct file permissions for WATO snapshots

    BI:
    * 4670 FIX: Fixed exception when trying to edit not existing BI aggregation

    Event Console:
    * 4470 FIX: Event console: fixed incorrect event counting for timed-out and heartbeat events...


1.2.8p21:
    Checks & Agents:
    * 4032 smart agent plugin: disable megacli logging output...
    * 4194 FIX: esx_vsphere_hostsystem.multipath: Fixed grouping of paths...
            NOTE: Please refer to the migration notes!
    * 4544 FIX: multipath: Fixed missing infos in output if a failure occurs...