@@ -1,0 +1,9 @@
+Title: oracle_recovery_area: Added missing metric info
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.8p23
+Date: 1494602000
+Class: fix
+
+
